src/App.css
:root {
    max-width: 1280px;
    padding: 1rem;
    text-align: center;
    font-family: "Press Start 2P" !important;
}
html {
    margin: 0;
    min-height: 100%;
}
body {
    background-image: url("assets/sky.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: right;
    background-color: rgb(61, 0, 46); 
    margin: 0;
    min-height: 100%;
}

.window {
    border-radius: 2px;
    background-color: #eddfed;
}
/* Pink gradient for the window titles */
.title-bar {
    background: linear-gradient(
        90deg,
        #d929b8,
        #f79ee7
    );
}

.top-bar {
  position: fixed;
  width: 100%;
  height: 12vh;
  left: 0;
  top: 0;
  background-color: rgba(102, 102, 102, 0.476);
  z-index: 2;
}
.main-components {
  padding-top: 6vh;
}
.login-btn {
    float: right;
    padding:4vh 0;
    margin-right: 2vw;
 
}
.tutorial-btn {
    float: left;
    padding:4vh 0;
    margin-left: 2vw;
}
.logo img {
    margin-top: 2vh;
    width: 8vh;
    height: 8vh;

}
#google-logo {
    width: 2vh;
    height: 2vh;
    margin-right: 1vh;

}

.logo:hover {
    filter: drop-shadow(0 0 2em #ef63c7aa);
}
.logo.react:hover {
    filter: drop-shadow(0 0 2em #e747d5aa);
}

@keyframes logo-spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

@media (prefers-reduced-motion: no-preference) {
    a:nth-of-type(2) .logo {
        animation: logo-spin infinite 20s linear;
    }
}

.main {
    margin-left: 5vw;
}

/* Matrix grid, please do not change height units */
.grid {
    float: left;
    width: 88vh;
    height: 88vh;
    margin-left: 5vw;
}
.container {
    display: grid;
    grid-template-rows: repeat(64, 1fr);
    grid-template-columns: repeat(64, 1fr);
    width: 85vh;
    height: 85vh;
    margin-left: auto;
    margin-right: auto;
}

/* Colour palette */
.colorPalette {
    float: right;
    margin-top: 10vw;
    margin-right: 20vw;
    width: 8vw;
    height: 30vw;
    z-index: 2;
}
.colorPalette .title-bar {
    text-align: left;
}
.colorPalette-container {
    display: grid;
    grid-template-rows: repeat(8, 1fr);
    grid-template-columns: repeat(2, 1fr);
    width: 5vw;
    height: 20vw;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2vw;
    margin-bottom: 1vw;
}
.colorPalette-container .grid-item {
    border: 0.1vw solid #000000;
}
.colorPalette button {
    margin-bottom: 1vw;
}
#submit-icon {
    height: 2.3vh;
}

/* A regular cell of the matrix grid */
.grid-item {
    border: 0.1vw solid #000000;
}
/* Selected cell will get a golden highlight */
.chosen-item {
    border: 1px solid rgb(138, 40, 150);
    box-shadow: 1px 1px 8px 8px rgb(255, 238, 0);
    position: relative;
    z-index: 1;
}

.txt-btn {
    font-family: "Press Start 2P" !important;
}

